# PRISM-Orch

./: .env-local  .env.example  .gitignore  Dockerfile  README.md  demo_prism_orch.py  docker-compose.yml  example_compliance_llm.py  example_mem0_integration.py  example_modular_usage.py  main.py  orchestration_db_schema_updated.md  pyproject.toml  requirements.txt  start_services.sh  test_client.py  test_comprehensive.py  test_orch_tools.py  test_rag_planning.py  test_report_20250822_220513.json
InstructionRF/: =0.46.1  README.md  config.json  evaluate_intent_accuracy.py  instruction_rf_client copy.py  instruction_rf_client.py  instruction_schema.json  predictions.jsonl  prompt_manager.py  prompts.yaml  run.sh  run_multi_gpu.sh  simple_curl_test.sh  task_executor.py  test_vllm.py  (+1 more)
db/: ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml
db/docs/: IMPLEMENTATION_LOG.md  README_DB.md
db/grafana/dashboards/: prism-ai-manufacturing.json  prism-db-monitoring.json  prism-kafka-monitoring.json  prism-overview-monitoring.json  prism-postgresql-monitoring.json  prism-redis-monitoring.json
db/grafana/provisioning/dashboards/: dashboard.yml
db/grafana/provisioning/datasources/: datasource.yml
db/init/: 01_create_tables.sql  02_sample_data.sql
db/kafka/: create_topics.py  requirements.txt
db/prometheus/: prometheus.yml
db/redis/: redis.conf
db/scripts/: deploy.sh  generate_dashboard_dummy_data.py  generate_test_data.py  generate_test_data_docker.py  requirements.txt  setup_monitoring.sh  simple_test_generator.py  test_all.py  test_monitoring.py
db/weaviate/: requirements.txt  schema_init.py
(+72 files in other folders)
