[project]
name = "prism-orch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mem0ai>=0.1.116",
    "openai>=1.101.0",
    "prism_core>=0.2.5",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "requests>=2.32.5",
    "weaviate-client==4.4.0",
]

[tool.uv.sources]
prism_core = { path = "../prism-core", editable = true }
