[project]
name = "prism-orchestration-db"
version = "1.0.0"
description = "자율제조 구현을 위한 오케스트레이션 에이전트 데이터베이스"
authors = [
    {name = "PRISM Team", email = "team@prism-orch.com"}
]
dependencies = [
    "psycopg2-binary>=2.9.0",
    "redis>=4.5.0",
    "kafka-python>=2.0.2",
    "weaviate-client>=4.4.1",
    "requests>=2.28.0",
    "asyncio-mqtt>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
prism-db-deploy = "scripts.deploy:main"
prism-db-test = "scripts.test_all:main"